# Tkinter

./: Aula 01.py  Aula 02.py  GAB - Botões.py  GAB - Caixa de Textos Grandes.py  GAB - Interação entre Elementos TK.py  GAB_Lista Suspensa Tk.py  GAB_Selecionando arquivo.py  PROJETO.py  README.md  RadioButton.py  SistemaCotacao.py  Teste.xlsx  TkinterOpcoes.py  pyproject.toml
